--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -55,6 +55,7 @@ jobs:
           haxelib install flixel-ui
           haxelib install hscript
           haxelib install flixel-addons
+          haxelib install newgrounds
           haxelib git linc_luajit https://github.com/jigsaw-4277821/linc_luajit.git --quiet 
           haxelib git extension-webm https://github.com/Sirox228/extension-webm
           haxelib install actuate
