--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -49,14 +49,17 @@ jobs:
           haxelib install lime
           haxelib install hxCodec
           haxelib install openfl
+          haxelib install hscript
           haxelib --never install flixel
           haxelib run lime setup flixel
           haxelib install flixel-tools
           haxelib install flixel-ui
           haxelib install hscript
+          haxelib install polymod
           haxelib install flixel-addons
           haxelib install newgrounds
           haxelib git linc_luajit https://github.com/jigsaw-4277821/linc_luajit.git --quiet 
+          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit --quiet
           haxelib git extension-webm https://github.com/Sirox228/extension-webm
           haxelib install actuate
           haxelib list
